[gd_scene load_steps=10 format=3 uid="uid://d3c8gi62hlnlh"]

[ext_resource type="Texture2D" uid="uid://cjpbo3qb8nvfq" path="res://Assets/radar/Radar.png" id="1_0ni3r"]
[ext_resource type="Script" uid="uid://bu5fk4fgjukof" path="res://scripts/level/radar_conditions_list.gd" id="1_6q7p4"]
[ext_resource type="Theme" uid="uid://dp0bjqpdecqt8" path="res://themes/radar_list_label.tres" id="2_tssv7"]
[ext_resource type="Theme" uid="uid://2ayqmvtsoal2" path="res://themes/item__list_label.tres" id="3_12bdm"]
[ext_resource type="FontFile" uid="uid://dr1ok3ju4bfb3" path="res://Assets/fonts/digital-7.ttf" id="5_o5n57"]

[sub_resource type="Animation" id="Animation_64nmr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DirectionalLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_krrse"]
resource_name = "close_radar"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DirectionalLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.533333, 1),
"transitions": PackedFloat32Array(3.73213, 4.75684, 1),
"update": 0,
"values": [0.0, 50.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.0848444, 0.0848444), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(534, 301), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_lqb04"]
resource_name = "open_radar"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DirectionalLight2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(4.75684, 1),
"update": 0,
"values": [100.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.0848444, 0.0848444), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(534, 301), Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_24k21"]
_data = {
&"RESET": SubResource("Animation_64nmr"),
&"close_radar": SubResource("Animation_krrse"),
&"open_radar": SubResource("Animation_lqb04")
}

[node name="RadarConditionsList" type="Node2D"]
script = ExtResource("1_6q7p4")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(602, 324)
scale = Vector2(0.736833, 0.718779)
texture = ExtResource("1_0ni3r")

[node name="ItensToBuild" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 373.0
offset_top = 137.0
offset_right = 413.0
offset_bottom = 177.0
scale = Vector2(1.82589, 1.82589)

[node name="Panel" type="Panel" parent="ItensToBuild"]
layout_mode = 0
offset_left = -13.0
offset_top = -18.0
offset_right = 27.0
offset_bottom = 22.0
scale = Vector2(6.41208, 5.67825)

[node name="Label" type="Label" parent="ItensToBuild"]
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 221.0
offset_bottom = 41.0
theme = ExtResource("2_tssv7")
text = "Para Decolar:"

[node name="CheckBoxContainer" type="VBoxContainer" parent="ItensToBuild"]
layout_mode = 0
offset_left = 15.0
offset_top = 52.0
offset_right = 67.0
offset_bottom = 160.0

[node name="CheckBox" type="CheckBox" parent="ItensToBuild/CheckBoxContainer"]
layout_mode = 2

[node name="CheckBox2" type="CheckBox" parent="ItensToBuild/CheckBoxContainer"]
layout_mode = 2

[node name="CheckBox3" type="CheckBox" parent="ItensToBuild/CheckBoxContainer"]
layout_mode = 2

[node name="CheckBox4" type="CheckBox" parent="ItensToBuild/CheckBoxContainer"]
layout_mode = 2

[node name="ItensContainer" type="VBoxContainer" parent="ItensToBuild"]
layout_mode = 0
offset_left = 45.0
offset_top = 56.0
offset_right = 227.0
offset_bottom = 158.165
theme = ExtResource("3_12bdm")

[node name="FuelTankLabel" type="Label" parent="ItensToBuild/ItensContainer"]
layout_mode = 2
text = "Tanque de Combustível"

[node name="HyperDriveLabel" type="Label" parent="ItensToBuild/ItensContainer"]
layout_mode = 2
text = "HyperDrive"

[node name="FuelDriveLabel" type="Label" parent="ItensToBuild/ItensContainer"]
layout_mode = 2
text = "Combustível"

[node name="FixRobotsLabel" type="Label" parent="ItensToBuild/ItensContainer"]
layout_mode = 2
text = "Robôs de Conserto"

[node name="FixRobotsTotalLabel" type="Label" parent="ItensToBuild"]
z_index = 3
layout_mode = 0
offset_left = 179.0
offset_top = 136.0
offset_right = 361.0
offset_bottom = 157.0
theme_override_fonts/font = ExtResource("5_o5n57")
theme_override_font_sizes/font_size = 15
text = "00/10"

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
position = Vector2(618, 317)

[node name="RadarConditionsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_24k21")
}

[node name="CloseRadar" type="Button" parent="."]
z_index = 3
offset_left = 542.0
offset_top = 421.0
offset_right = 597.0
offset_bottom = 452.0
scale = Vector2(2.39363, 2.39363)
theme_override_fonts/font = ExtResource("5_o5n57")
text = "Voltar"

[connection signal="pressed" from="CloseRadar" to="." method="_on_close_radar_pressed"]
